2002-08-31  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/gnu/Makefile: Only depend on Versions.v.i for
	errlist-compat.c if build-shared==yes.

2002-08-31  Andreas Jaeger  <aj@suse.de>

	* sysdeps/x86_64/dl-machine.h (elf_machine_runtime_setup): Declare
	external functions with hidden attribute.
	(elf_machine_rela): Optimize.

	* sysdeps/x86_64/memset.S: New file.
	* sysdeps/x86_64/bzero.S: New file.
	* sysdeps/x86_64/stpcpy.S: New file.
	* sysdeps/x86_64/strcat.S: New file.
	* sysdeps/x86_64/strchr.S: New file.
	* sysdeps/x86_64/strcpy.S: New file.
	* sysdeps/x86_64/strcspn.S: New file.
	* sysdeps/x86_64/strlen.S: New file.
	* sysdeps/x86_64/strpbrk.S: New file.
	* sysdeps/x86_64/strspn.S: New file.
	* sysdeps/x86_64/strcmp.S: New file.
	* sysdeps/x86_64/strtok_r.S: New file.
	* sysdeps/x86_64/strtok.S: New file.
	* sysdeps/x86_64/memcpy.S: New file.
	* sysdeps/x86_64/mempcpy.S: New file.

	* sysdeps/x86_64/fpu/s_copysign.S: Fix algorithm.

	* sysdeps/x86_64/fpu/libm-test-ulps: Add ulps for double tests.

2002-08-31  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/Makefile (generated): Add errlist-compat.c.

	* locale/Makefile (extra-objs): Add $(localedef-aux:=.o).

	* locale/localeinfo.h: Pretty printing.

	* stdio-common/vfprintf.c (vfprintf): Remove duplicate ifs in
	form_number handling.

2002-08-31  Andreas Jaeger  <aj@suse.de>

	* sysdeps/x86_64/fpu/libm-test-ulps: Add ulps for float and long
	double tests.

	* sysdeps/unix/sysv/linux/x86_64/Makefile (sysdep_routines): Add
	__start_context.

	* sysdeps/unix/sysv/linux/x86_64/__start_context.S: New file.

	* sysdeps/unix/sysv/linux/x86_64/makecontext.c: New file.

	* sysdeps/unix/sysv/linux/x86_64/ucontext_i.h: Add defines for
	registers used for passing args.

	* sysdeps/unix/sysv/linux/x86_64/swapcontext.S: Save and restore
	all needed registers.

	* sysdeps/unix/sysv/linux/x86_64/setcontext.S: Restore all
	registers.

	* sysdeps/unix/sysv/linux/x86_64/getcontext.S: Save all needed
	registers.
