@@ -1,3 +1,14 @@
+2002-08-31  Roland McGrath  <roland@redhat.com>
+
+	* locale/duplocale.c (__duplocale): Free names from the right array.
+
+	* locale/uselocale.c (__uselocale): Return previous locale when
+	setting a new one.
+
+	* locale/newlocale.c: Commit changes from 2002-08-30
+	batch where I failed to commit this file:
+	(__newlocale): Fill in __names array.
+
 2002-08-31  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/gnu/Makefile: Only depend on Versions.v.i for
